Fixed Nav Bar
Made the nav bar stay at the top of the screen and added padding to the top of the main section so navbar doesn't cut off the hero image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,9 @@
     text-decoration: none;
 }
 
-
+main{
+    padding: 60px 0 0 0;
+}
 
 /* Adjusting the main content settings*/
 .wrapper{
@@ -62,9 +64,13 @@ h2{
 /* Editing the nav bar */
 nav{
   min-height: 60px;
-    max-height: 10vh;
   background-color: #722431;
   display: flex;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 99;
+
 }
 
 nav logocontainer{
